--- a/package.xml
+++ b/package.xml
@@ -13,7 +13,9 @@
   <test_depend>ament_lint_common</test_depend>
 
   <exec_depend>gazebo_ros</exec_depend>
+  <exec_depend>joint_state_publisher</exec_depend>
   <exec_depend>xacro</exec_depend>
+  <exec_depend>robot_state_publisher</exec_depend>
 
   <export>
     <build_type>ament_cmake</build_type>
