consegui arrumar o controle e fazer o teleop funcionar, so falta arrumar as rodas bobas e criar um launch pra o teleop

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,9 +15,9 @@ install(
     launch
     meshes
     models
-    rviz
     worlds
     urdf
+    config
   DESTINATION
     share/${PROJECT_NAME}/
 )
