--- a/config/rocket_control.yaml
+++ b/config/rocket_control.yaml
@@ -1,24 +1,24 @@
 controller_manager:
-  ros_parameters:
-    update rate: 30
+  ros__parameters:
+    update_rate: 30
     use_sim_time: true
 
-    diff cont:
+    diff_cont:
       type: diff_drive_controller/DiffDriveController
 
-    joint broad:
+    joint_broad:
       type: joint_state_broadcaster/JointStateBroadcaster
 
 diff_cont:
-  ros_parameters:
+  ros__parameters:
 
-    publish rate: 50.0
+    publish_rate: 50.0
 
     base_frame_id: base_link
 
-    left_wheel_names: ['left_wheel_joint']
-    right_wheel_names: ['right_wheel_joint']
-    wheel_separation: 3.14
-    wheel_radius: 0.675
+    left_wheel_names: ['joint_left_wheel']
+    right_wheel_names: ['joint_right_wheel']
+    wheel_separation: 0.53
+    wheel_radius: 0.0675
 
     use_stamped_vel: false
